openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainbook
spec:
  replicas: 1

  selector:
    matchLabels:
      app: trainbook

  template:
    metadata:
      labels:
        app: trainbook

    spec:
      containers:
        - name: trainbook

          image: image-registry.openshift-image-registry.svc:5000/train-ticket-reservation/trainbook:1.3

          ports:
            - name: http
              containerPort: 9090
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
