openshift/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trainbook
spec:
  ingressClassName: openshift-default
  rules:
    - host: trainbook.apps-crc.testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trainbook
                port:
                  number: 9090
